[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://game_screen/gui.gd" type="Script" id=2]
[ext_resource path="res://ui/cancel_shortcut.tres" type="ShortCut" id=3]
[ext_resource path="res://title_screen/settings/settings_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/font_small.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/button_base.gd" type="Script" id=6]

[node name="Gui" type="Node"]
script = ExtResource( 2 )

[node name="PauseContainer" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseControls" type="VBoxContainer" parent="PauseContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="PauseContainer/PauseControls"]
margin_top = 115.0
margin_right = 512.0
margin_bottom = 141.0
text = "ui_pause"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseContainer/PauseControls"]
margin_top = 145.0
margin_right = 512.0
margin_bottom = 185.0
alignment = 1

[node name="QuitButton" type="Button" parent="PauseContainer/PauseControls/HBoxContainer"]
margin_right = 98.0
margin_bottom = 40.0
shortcut_in_tooltip = false
text = "ui_quit"
script = ExtResource( 6 )

[node name="Control" type="Control" parent="PauseContainer/PauseControls/HBoxContainer"]
margin_left = 102.0
margin_right = 212.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="SettingsButton" type="Button" parent="PauseContainer/PauseControls/HBoxContainer"]
margin_left = 216.0
margin_right = 362.0
margin_bottom = 40.0
shortcut_in_tooltip = false
text = "ui_settings"
script = ExtResource( 6 )

[node name="ContinueButton" type="Button" parent="PauseContainer/PauseControls/HBoxContainer"]
margin_left = 366.0
margin_right = 512.0
margin_bottom = 40.0
shortcut_in_tooltip = false
shortcut = ExtResource( 3 )
text = "ui_continue"
script = ExtResource( 6 )

[node name="Settings" parent="PauseContainer" instance=ExtResource( 4 )]
visible = false
show_language_settings = false

[node name="Container" parent="PauseContainer/Settings/VBoxContainer/PanelContainer/TabContainer/OtherSettings" index="0"]
margin_top = 52.0
margin_bottom = 124.0

[node name="BackToTitleButton" parent="PauseContainer/Settings/VBoxContainer" index="2"]
margin_left = 414.0
margin_right = 512.0
text = "ui_back"

[node name="LevelComplete" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 187.0
margin_top = -150.0
margin_right = -186.0
margin_bottom = -360.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelComplete"]
margin_left = 7.0
margin_top = 7.0
margin_right = 260.0
margin_bottom = 143.0
alignment = 1

[node name="LevelLabel" type="Label" parent="LevelComplete/VBoxContainer"]
margin_top = 16.0
margin_right = 253.0
margin_bottom = 42.0
text = "Level 1 Complete!"
align = 1

[node name="RetriesLabel" type="Label" parent="LevelComplete/VBoxContainer"]
margin_top = 46.0
margin_right = 253.0
margin_bottom = 72.0
text = "0 retries"
align = 1

[node name="Padding" type="Label" parent="LevelComplete/VBoxContainer"]
margin_top = 76.0
margin_right = 253.0
margin_bottom = 102.0
align = 1

[node name="ContinueLabel" type="Label" parent="LevelComplete/VBoxContainer"]
margin_top = 106.0
margin_right = 253.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 5 )
text = "ui_any_key_to_continue"
align = 1

[node name="LevelCompleteTween" type="Tween" parent="LevelComplete"]

[connection signal="pressed" from="PauseContainer/PauseControls/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PauseContainer/PauseControls/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PauseContainer/PauseControls/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseContainer/Settings/VBoxContainer/BackToTitleButton" to="." method="_on_Settings_BackToTitleButton_pressed"]
[connection signal="gui_input" from="LevelComplete" to="." method="_on_LevelComplete_gui_input"]

[editable path="PauseContainer/Settings"]
